commit tree 4b2a28d648454f242a407efc7b50f8acb8597245

--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ form * {
   margin: 1em;
 }
 
-#checkbox {
+#checkbox  {
   display:inline;
-
+  left: -35%;
+  margin: auto;
+  position: absolute;
 }
